--- a/watch/app/src/main/res/layout/fragment_tfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_tfirst.xml
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="fitCenter"
-        android:src="@raw/dog98"
+        android:src="@raw/doghome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/circleProgress"
         app:layout_constraintHorizontal_bias="0.504"
