:wrench: refact : CountDown 중 운동 Service 실행 메서드 간소화

--- a/watch/app/src/main/res/layout/fragment_r_first.xml
+++ b/watch/app/src/main/res/layout/fragment_r_first.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/thejamsil_medium"
-        android:text="자유걷기"
+        android:text="자유달리기"
         android:textColor="@color/black"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
