:sparkles: feat : 홈화면 결과화면 UI

--- a/watch/app/src/main/res/layout/activity_result.xml
+++ b/watch/app/src/main/res/layout/activity_result.xml
@@ -8,6 +8,19 @@
     android:background="@drawable/backresult98"
     tools:context=".activity.result.ResultActivity">
 
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gifImageView"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:scaleType="centerCrop"
+        android:src="@raw/lay1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26" />
+
     <TextView
         android:id="@+id/운동제목"
         android:layout_width="wrap_content"
